tests/baselines/reference/ambientExportDefaultErrors.errors.txt
foo.d.ts(1,16): error TS2714: The expression of an export assignment must be an identifier or qualified name in an ambient context.
foo2.d.ts(1,10): error TS2714: The expression of an export assignment must be an identifier or qualified name in an ambient context.
indirection.d.ts(3,20): error TS2714: The expression of an export assignment must be an identifier or qualified name in an ambient context.
indirection2.d.ts(3,14): error TS2714: The expression of an export assignment must be an identifier or qualified name in an ambient context.


==== consumer.ts (0 errors) ====
    /// <reference path="./indirection.d.ts" />
    /// <reference path="./indirection2.d.ts" />
    import "indirect";
    import "foo";
    import "indirect2";
    import "foo2";
==== foo.d.ts (1 errors) ====
    export default 2 + 2;
                   ~~~~~
!!! error TS2714: The expression of an export assignment must be an identifier or qualified name in an ambient context.
    export as namespace Foo;
    
==== foo2.d.ts (1 errors) ====
    export = 2 + 2;
             ~~~~~
!!! error TS2714: The expression of an export assignment must be an identifier or qualified name in an ambient context.
    export as namespace Foo2;
    
==== indirection.d.ts (1 errors) ====
    /// <reference path="./foo.d.ts" />
    declare module "indirect" {
        export default typeof Foo.default;
                       ~~~~~~~~~~~~~~~~~~
!!! error TS2714: The expression of an export assignment must be an identifier or qualified name in an ambient context.
    }
    
==== indirection2.d.ts (1 errors) ====
    /// <reference path="./foo2.d.ts" />
    declare module "indirect2" {
        export = typeof Foo2;
                 ~~~~~~~~~~~
!!! error TS2714: The expression of an export assignment must be an identifier or qualified name in an ambient context.
    }
    